Change majority of font colours to black to avoid contrast problems

--- a/cla_frontend/assets-src/stylesheets/design-patterns/_case-details.scss
+++ b/cla_frontend/assets-src/stylesheets/design-patterns/_case-details.scss
@@ -1,29 +1,14 @@
-.CaseDetails {
-  .Icon {
-    &:before,
-    &:after {
-      color: $grey-1;
-    }
-  }
-}
-
 .CaseDetails-caseNum {
   @include bold-24;
   margin: 20px 0 0;
   padding: 0;
-  color: $grey-1;
 }
 .CaseDetails-entitlementNum {
   @include core-14;
   padding: 0;
   margin: 0;
-  color: $grey-1;
 }
 
 .CaseDetails-actions {
   margin: 15px 0 0;
-
-  // .Button {
-  //   margin: 0 0 10px 10px;
-  // }
 }
