--- a/cla_frontend/assets-src/stylesheets/design-patterns/_timer.scss
+++ b/cla_frontend/assets-src/stylesheets/design-patterns/_timer.scss
@@ -11,7 +11,6 @@
 .Timer-value {
   display: block;
   padding-top: 5px;
-  color: $grey-1;
 
   .Timer--inline & {
     @include bold-14;
